# ts2-swift-demangle

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  lint.yaml  publish.yaml
demangle/: __init__.py  apid.py
